Fix header's and footer's overflow

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -7,6 +7,7 @@
   color: #fefefe;
   font-size: 14px;
   position: relative;
+  overflow: hidden;
 
   &::before {
     content: '';
