--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -7,6 +7,7 @@
   padding-top: 240px;
   @extend %background-image;
   background-image: url("../images/hero_bg.png");
+  overflow: hidden;
 
   &::after {
     content: '';
